--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,14 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 Flask==2.2.5
+greenlet==3.0.3
 idna==3.6
 importlib-metadata==6.7.0
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 requests==2.31.0
+SQLAlchemy==2.0.29
 typing_extensions==4.7.1
 urllib3==2.0.7
 Werkzeug==2.2.3
