--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,16 @@
-aiohttp==3.8.6
+aiohttp==3.9.5
 aiosignal==1.3.1
 async-timeout==4.0.3
-asynctest==0.13.0
 attrs==23.2.0
-certifi==2024.2.2
-charset-normalizer==3.3.2
+blinker==1.7.0
 click==8.1.7
-colorama==0.4.6
-Flask==2.2.5
-frozenlist==1.3.3
-greenlet==3.0.3
-idna==3.6
-importlib-metadata==6.7.0
-itsdangerous==2.1.2
+Flask==3.0.3
+frozenlist==1.4.1
+idna==3.7
+itsdangerous==2.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 multidict==6.0.5
-requests==2.31.0
-typing_extensions==4.7.1
-urllib3==2.0.7
-Werkzeug==2.2.3
+tenacity==8.3.0
+Werkzeug==3.0.2
 yarl==1.9.4
-zipp==3.15.0
